fix alignment issues (#621)

--- a/src/assets/scss/modules/_utils.scss
+++ b/src/assets/scss/modules/_utils.scss
@@ -18,3 +18,7 @@
 .govuk-util__bold {
   font-weight: bold;
 }
+
+.govuk-util__block {
+  display: block;
+}
